raiden/tests/ui/gsi_key_conditions/skip_first_sort_key.stderr
error[E0277]: the trait bound `KeyConditionFilledOrWaitOperator<TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken, TypedCompositeGsiSortKeyTestTestGsiTerminalKeyConditionToken>: raiden::KeyConditionBuilder<TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken, _>` is not satisfied
  --> tests/ui/gsi_key_conditions/skip_first_sort_key.rs:23:14
   |
23 |         .and(TypedCompositeGsiSortKeyTest::test_gsi_sort_key_condition_2().begins_with("long"));
   |          --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |          |
   |          required by a bound introduced by this call
   |
   = help: the trait `KeyConditionBuilder<TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken, _>` is not implemented for `KeyConditionFilledOrWaitOperator<TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken, TypedCompositeGsiSortKeyTestTestGsiTerminalKeyConditionToken>`
           but trait `KeyConditionBuilder<TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken, TypedCompositeGsiSortKeyTestTestGsiTerminalKeyConditionToken>` is implemented for it
   = help: for that trait implementation, expected `TypedCompositeGsiSortKeyTestTestGsiSort2KeyConditionToken`, found `TypedCompositeGsiSortKeyTestTestGsiSort1KeyConditionToken`
note: required by a bound in `KeyConditionFilledOrWaitOperator::<T, U>::and`
  --> src/key_condition/mod.rs
   |
   |     pub fn and<V>(self, cond: impl KeyConditionBuilder<U, V>) -> KeyConditionFilled<T, V> {
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `KeyConditionFilledOrWaitOperator::<T, U>::and`
